@@ -4,8 +4,6 @@ AUX apache_exporter.service 196 BLAKE2B b7429d240256bdbe594741900bd1715d7806f604
 AUX sysconfig.apache_exporter 11 BLAKE2B e83c8a1c6cf0d2269d032d80bfb5f37969adce8655298d49f942e19318e1fcabe7f618514ce65d9e0209959d5ccb38141e81fcccd65a754584eaf2db3b4fbd03 SHA512 f4d982f86de30c5b52b04c201cd38fffa87f860bef18af6ab85e856ae2081b919256b918b5f4821ee2fc4da0548d1a95c2522b29cddca57f694e2f26c1b1b2b9
 DIST apache_exporter-0.11.0-deps.tar.xz 23603784 BLAKE2B b2e8f25b73dfc84a7108c42780ebb38412925218d11b18ce26f83c504d937b7ac026152e78913d71b92247d4514e0bf06f7d52267bbd5861e5fb1585e2651008 SHA512 8e1ece3be69284c0a0513c3aa18411f0ab9ff2f300b03ff0fea527413c4f4ae3a88287973fef2140497ad4298a2fb4f88c5476b0ef35870730c7e6ebc329d154
 DIST apache_exporter-0.11.0.tar.gz 41172 BLAKE2B 7c03a62ad8d7c76c80fcd7bac6c73079ef6caf7d0924c00559d788cdab98d89342e453056e52ad7d5f908521fdebaf99b8103c69fa46e0da15789cca0e74e5e9 SHA512 98ba30804bbd9a46ff0728e8bd8b02f6820492e0e44a60122acc9727c4e3fbabefb135f66ee36820e90cf6322b5e7335578eb8568a8f1fe6aead279a050e8208
-DIST apache_exporter-0.8.0.tar.gz 1687423 BLAKE2B 8ffe1edd6549c6129ec82852ee7134ba3ceb22f6ab6c678e0c28e6ed58c43d0243184efed013e11e3062b4359beb43914059bc35a31f242c93ef210616248fc7 SHA512 1e885687a8a2d5abfbf16f11d1940688b65404e76fa620ef397eb85733ab0fa9ec9ba4143728466d3036266a6f3ef03409000a7c69d85e2be6eda2075bc8a113
 EBUILD apache_exporter-0.11.0.ebuild 999 BLAKE2B a47143595acd55d6437b5ae0afe4e079604f637b7f631d136fb8034ffeec0af42e805d9975c8eb587f9f09049be25c7e6d5bdd54fc4c1fdf3a3f29c16b6637c4 SHA512 1dc2d8ad914727c8c7246153f42657f5dc5efd025a30edf10961ff1a1ef056769fb8f07fa185b251af86137f98f24e3c1c8940a354536a8ea4f9cc2a91b1dc51
-EBUILD apache_exporter-0.8.0-r1.ebuild 1339 BLAKE2B d1fd6596f842ba122c57dc59cbf7f23b49aade25df361734e214eca3ae9924a74c2f253b741238da06091a9f102953e7e7a68bbd86b4080d9c7372d1e854225f SHA512 df27ff9f4fa0ecf4a8011d0a5f5a42339fde421742794a89a425eaa34640aff86340fa4f65e108b4b0c225bd7862551b04e4c4cf160b3acaee1be8bd271a5dce
-MISC ChangeLog 1647 BLAKE2B a501f35d077b654fa59b37e4e2aad1c02528831ac9679e3bbca1442f9acf003eeb95e12239a301a20e5ef66f02f8ce15a25386efbd734581b7ec88d0aac188e2 SHA512 849533db53b4ae81568363380b7c27918c3b5b24249b67be46eaadbb8839665f819644d3af67613068823cec43d42ccf97d33454fa7cdab32a58f6b6b90a9700
+MISC ChangeLog 1784 BLAKE2B 711840e812185617076bb46a0932cf788ecb858410369aef3032da3e5a4a655f004d6f03fe2ea978d60e67bed11fc38632c2b794e9e344e14a85e6c5e8722886 SHA512 b95c61c77c453a542a101ae5aeb017b5801b6fe79a427cf1f1667e66956c94bc03e3ad49b75b2bdfaf33ad977fa1a9ff152fc782d2b223a21d4f3ffb82d2186d
 MISC metadata.xml 337 BLAKE2B bd72b6097fead5eaf80082790d3712ae0893b118140b62f58639f0e5c56bebf57dbd0ccd0ea19af82b2dce88c88c494d88290f98df4818e4fad3f4386398d171 SHA512 aee4825d8b90a8fd84fb558b9af4b7eb889fcf81bae6c7b317a9d69f62b06dd0f0bc2aa91aa2c32f10ff91fdbf64b341d7e5adc3c65a5225c7e0e92d7a6b7816
