@@ -1,3 +1,7 @@
+  30 Apr 2022; Manuel Friedli <manuel@gentoo.org>
+  -apache_exporter-0.8.0-r1.ebuild:
+  app-metrics/apache_exporter: Prune old version.
+
   30 Apr 2022; Manuel Friedli <manuel@gentoo.org> apache_exporter-0.11.0.ebuild:
   app-metrics/apache_exporter: Fix build.
 
